src/objects/Sale__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <label>system.address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asking_Price__c</fullName>
        <label>Asking Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated automatically after going through the book comp wizard. This signifies that the comp information has been confirmed and the invoices and commission payments generated.</inlineHelpText>
        <label>Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Comps (Buyer Company)</relationshipLabel>
        <relationshipName>Comps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comps (Buyer)</relationshipLabel>
        <relationshipName>Comps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAP_Rate__c</fullName>
        <label>CAP Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cash_on_Cash__c</fullName>
        <label>Cash-on-Cash (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>system.city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>TEXT( Property__r.Class__c )</formula>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Percent__c</fullName>
        <label>Commission (%)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>On-Market Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Market Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escalations__c</fullName>
        <label>Escalations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escrow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escrow</label>
        <referenceTo>Escrow__c</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlord_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comps (Landlord)</relationshipLabel>
        <relationshipName>Comps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Comps (Landlord)</relationshipLabel>
        <relationshipName>Comps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Commencement_Date__c</fullName>
        <label>Lease Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration_Date__c</fullName>
        <inlineHelpText>When does the lease expire?</inlineHelpText>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Months__c</fullName>
        <label>Lease Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Total__c</fullName>
        <inlineHelpText>Total considerations for all Commission Items</inlineHelpText>
        <label>Lease Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as requirement of the third project.</description>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT( Property__r.Market__c )</formula>
        <label>system.market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Amount__c</fullName>
        <label>Mortgage Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OSF_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy_at_Close__c</fullName>
        <label>Occupancy at Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Room__c</fullName>
        <formula>Sale_Price__c  /  Sale_Price_Room__c</formula>
        <label>Sale Price/Room</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Research</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>if( Property__c =&quot;&quot;,  Property_Leases__r.Property_Address__c ,  Property__r.Property_Address__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>if( Property__c =&quot;&quot;, Property_Leases__r.City__c ,  Property__r.City__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Leases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Leased</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Lease Comps</relationshipLabel>
        <relationshipName>Comps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_SF__c</fullName>
        <formula>Property__r.Square_Footage__c</formula>
        <label>system.property sf</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_SF_new__c</fullName>
        <formula>if( Property__c =&quot;&quot;,  Property_Leases__r.Square_Footage__c ,  Property__r.Square_Footage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>if( Property__c =&quot;&quot;,  text(Property_Leases__r.State__c), text( Property__r.State__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Postal_Code__c</fullName>
        <formula>if( Property__c =&quot;&quot;,  Property_Leases__r.Zip_Code__c ,  Property__r.Zip_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Sold</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Sale Comps</relationshipLabel>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as requirement for third project.</description>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RRM__c</fullName>
        <inlineHelpText>Room Revenue Multiplier</inlineHelpText>
        <label>RRM</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Commencement_Date__c</fullName>
        <label>Rent Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Rate_Type__c</fullName>
        <label>Rental Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>$/SF/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$/SF/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rental_Rate__c</fullName>
        <label>Rental Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Image__c</fullName>
        <formula>if( Property__c =&quot;&quot;,  Property_Leases__r.Report_Image__c ,  Property__r.Report_Image__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price_Room__c</fullName>
        <formula>Property__r.Rooms__c</formula>
        <label>Room Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Price_SF__c</fullName>
        <formula>Sale_Price__c  /  Property_SF__c</formula>
        <label>Sale Price/SF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Price_Unit2__c</fullName>
        <formula>Sale_Price__c  /  Sale_Price_Unit__c</formula>
        <label>Sale Price/Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Price_Unit__c</fullName>
        <formula>Property__r.Units__c</formula>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Comps (Seller Company)</relationshipLabel>
        <relationshipName>Comps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comps</relationshipLabel>
        <relationshipName>Comps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Space</label>
        <referenceTo>Spaces__c</referenceTo>
        <relationshipLabel>Lease History</relationshipLabel>
        <relationshipName>Comps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suite_Floor__c</fullName>
        <label>Suite/Floor #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Commis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System_Commis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <formula>TEXT( Property__r.Tenancy__c)</formula>
        <label>Tenancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comps (Tenant)</relationshipLabel>
        <relationshipName>Comps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Comps</relationshipLabel>
        <relationshipName>Comps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Remaining_At_Close__c</fullName>
        <formula>(Lease_Expiration_Date__c  -  TODAY()) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many years were remaining on the lease term at close?</inlineHelpText>
        <label>Term Remaining At Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Holdbacks__c</fullName>
        <label>Total Holdbacks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Notes__c</fullName>
        <label>Transaction Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Comp</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Market__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Occupancy_at_Close__c</columns>
        <columns>Property_SF__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Price_SF__c</columns>
        <columns>Tenancy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Sales</label>
    </listViews>
    <listViews>
        <fullName>X2000_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2000</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2000</value>
        </filters>
        <label>2000 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2001_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2001</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2001</value>
        </filters>
        <label>2001 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2002_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2002</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2002</value>
        </filters>
        <label>2002 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2003_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2003</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2003</value>
        </filters>
        <label>2003 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2004_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2004</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2004</value>
        </filters>
        <label>2004 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2005_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2005</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2005</value>
        </filters>
        <label>2005 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2006_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2006</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2006</value>
        </filters>
        <label>2006 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2007_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2007</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2007</value>
        </filters>
        <label>2007 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2008_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2008</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2008</value>
        </filters>
        <label>2008 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2009_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2009</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2009</value>
        </filters>
        <label>2009 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2010_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2010</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2010</value>
        </filters>
        <label>2010 Sales</label>
    </listViews>
    <listViews>
        <fullName>X2011_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Asking_Price__c</columns>
        <columns>CAP_Rate__c</columns>
        <columns>Cash_on_Cash__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2011</value>
        </filters>
        <filters>
            <field>Sale_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2011</value>
        </filters>
        <label>2011 Sales</label>
    </listViews>
    <nameField>
        <label>Comp Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000005bCwMAI_00NE0000001v0y2MAA</fullName>
        <active>true</active>
        <field>Option__c.Lease__c</field>
        <filterItems>
            <field>Sale__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lease</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Option_Lease</name>
    </namedFilters>
    <pluralLabel>Comps</pluralLabel>
    <recordTypes>
        <fullName>Lease</fullName>
        <active>true</active>
        <label>Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lease_External</fullName>
        <active>true</active>
        <label>Lease (External)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sale</fullName>
        <active>true</active>
        <label>Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sale_External</fullName>
        <active>true</active>
        <label>Sale (External)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>